--- a/css/style.css
+++ b/css/style.css
@@ -620,9 +620,9 @@ footer .copyright{
     text-decoration: underline;
 }
 .generative-image{
-    position:fixed ;
-    top: 90;
-    right: 20;
+    position: relative;
+    top: 90px;
+    right: 20px;
 }
 
 
@@ -661,7 +661,7 @@ footer .copyright{
 }
 .topology-desc img{
     align-items:center;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 
@@ -788,7 +788,7 @@ footer .copyright{
     color: var(--secondary);
     text-decoration: none;
     font-size: 1rem;
-    margin-top: 0.5rem;
+    margin-top: 1.7rem;
     margin-left: 1rem;
     margin-bottom: 0.5rem;
 }
@@ -820,19 +820,19 @@ footer .copyright{
     margin-top:0rem;
 }
 
-.container-TO .card-wrapper{
+.container-TO .card-wrapper1{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-gap: 1rem;
     margin-top: 3rem;
 }
 
-.container-TO .card-wrapper .card{
+.container-TO .card-wrapper1 .card{
     position: relative;
     height: 250px;
 }
 
-.container-TO .card-wrapper .card .overlay{
+.container-TO .card-wrapper1 .card .overlay{
     position: absolute;
     top: 0;
     left: 0;
@@ -848,11 +848,11 @@ footer .copyright{
     transition: all 0.3s ease;
 
 }
-.container-TO .card-wrapper .card:hover .overlay{
+.container-TO .card-wrapper1 .card:hover .overlay{
     opacity: 1;
 }
 
-.container-TO .card-wrapper .card .overlay h4{
+.container-TO .card-wrapper1 .card .overlay h4{
     color: var(--pure);
     text-decoration: underline;
     
@@ -861,7 +861,7 @@ footer .copyright{
 
 
 
-.container-TO .card-wrapper .card img{
+.container-TO .card-wrapper1 .card img{
     height: 100%;
     width: 60%;
     outline: var(--primary);
@@ -883,12 +883,107 @@ footer .copyright{
     margin-top: 5rem;
 }
 
+.bridge-proj{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--pure);
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10rem;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+}
+
+.bridge-proj p{
+    color: var(--secondary);
+    text-decoration: none;
+    font-size: 1rem;
+    margin-top: 3rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}    
+.rev-proj{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--pure);
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10rem;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+}
+
+.rev-proj p{
+    color: var(--secondary);
+    text-decoration: none;
+    font-size: 1rem;
+    margin-top: 3rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+
+.wear-proj{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--pure);
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10rem;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+}
+
+.spit-proj{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--pure);
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10rem;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+}
+
+.spit1,.spit2,.spit3{
+    height: 100%;
+    width: 25%;
+    margin-top: 2rem;
+}
+
+.cad1,.cad2,.cad3,.cad4,.cad5{
+    height: 50%;
+    width: 20%;
+    row-gap: 2rem;
+    margin-top: 3rem;
+}
+
+.cad-proj{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--pure);
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10rem;
+    transform: translateX(-100%);
+    transition: all 0.5s ease-in-out;
+}
 .open{
     transform: translateX(0%);
     
     
 }
-.times,.times2,.gen-times,.topo-times,.rev-times,.veh-times, .bio-times, .elec-times{
+.times,.times2,.gen-times,.topo-times,.rev-times,.veh-times, .bio-times, .elec-times,.bridge-times,.rev-times2,.wear-times, .spit-times, .cad-times{
     position: fixed;
     top: 30px;
     right: 30px;
@@ -979,10 +1074,38 @@ footer .copyright{
     }
 
     .CV-VKJ{
-        width: 600px;
+        width: 900px;
         height: 900px;
     }
+
+
+    .spit1,.spit2,.spit3{
+        height: 50%;
+        width: 30%;
+        margin-top: 2rem;
+
+    }
+
+    .cad1,.cad2,.cad3,.cad4,.cad5{
+        height: 30%;
+        width: 30%;
+        row-gap: 2rem;
+        margin-top: 3rem;
+    }
+
+    .generative-desc .generative-image{
+        position: fixed;
+        
+        top: 230px;
+        right: 0px;
+    }
+    
+    
+        
+    
 }
+
+
 
 @media(max-width:576px){
     .hero{
@@ -1097,10 +1220,105 @@ footer .copyright{
     .generative-desc ul li p{
         font-size: .8rem;
         margin-bottom: 0.5rem;
-        margin-top: 0.5rem;
+        margin-top: 2.5rem;
+    }
+
+    .container-TO .card-wrapper1{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 0rem;
+        margin-top: 0rem;
     }
     
+    .container-TO .card-wrapper1 .card{
+        position: relative;
+        height: 220px;
+        width: 200px;
+        margin-left: -1rem;
+    }
+
+
+    .container-TO .card-wrapper1 .card img{
+        height: 100%;
+        width: 100%;
+        outline: solid var(--primary);
+
+        
+    }
+
+
+    
+    .bridgevid,.laddervid{
+        height: 50%;
+        width: 90%;
+        margin-top: 5rem;
+        outline: solid var(--primary);
+
+    }
+    .rev1,.rev2{
+        height: 50%;
+        width: 90%;
+        margin-top: 2rem;
+        outline: solid var(--primary);
+
+    }
+
+    .wear1,.wear2{
+        height: 50%;
+        width: 90%;
+        margin-top: 2rem;
+        outline: solid var(--primary);
+
+    }
+
+    .spit1,.spit2,.spit3{
+        height: 35%;
+        width: 55%;
+        margin-top: 2rem;
+        outline: solid var(--primary);
+
+    }
+    .cad1, .cad4,.cad5{
+        height: 30%;
+        width: 35%;
+        margin-top: 2rem;
+        outline: solid var(--primary);
+
+    }.cad2{
+        height:30% ;
+        width: 60%; ;
+        outline: solid var(--primary);
+    }
+    
+    .cad3{
+        height: 40%;
+        width:75% ;
+        outline: solid var(--primary);
+    }
+
+    .reverse-desc ul li p{
+        font-size: 0.65rem;
+    }
+    .vehicle-desc ul li p{
+        font-size: 0.8rem;
+    }
+
+    .biomimetics-desc ul li p{
+        font-size: 0.75rem;
+        margin-top:2rem;
+    }
+    .electric-desc h3{
+        font-size: 0.8rem;
+        margin-bottom: 0rem;
+        margin-top: 1rem;
+    }
+    .electric-desc ul li p{
+        font-size: 0.55rem;
+        margin-bottom: -0.5rem;
+    }
 }
+
+
 
 body,html{
     overflow-x: hidden;
