--- a/css/style.css
+++ b/css/style.css
@@ -1259,7 +1259,7 @@ footer .copyright{
 
 
     
-    .bridgevid,.laddervid{
+    .bridgevid{
         height: 50%;
         width: 90%;
         margin-top: 5rem;
